--- a/src/components/BkOpenFolder.css
+++ b/src/components/BkOpenFolder.css
@@ -1,13 +1,24 @@
-.bk-open-folder {
+.bk-open-container {
     position: fixed;
+    display: flex;
+    width: 400px;
+    flex-direction: row;
+    background: rgb(95, 110, 211);
+    border: 1px solid #888;
+    border-radius: 5px;
+}
+.title-container {
+    display: flex;
+    justify-content: space-between;
+}
+.bk-open-folder {
     display: flex;
     flex-wrap: wrap;
     width: 400px;
     /* height: var(--heght-bk); */
     flex-direction: row;
-    border: 1px solid #888;
-    background: var(--bg-body);
-    border-radius: 5px;
+    /* border: 1px solid #888; */
+    /* border-radius: 5px; */
     z-index: 100;
 }
 .title {
