--- a/src/components/BkModal.css
+++ b/src/components/BkModal.css
@@ -4,7 +4,7 @@
     /* width: 400px; */
     flex-direction: row;
     background: rgb(95, 110, 211);
-    /* border: 1px solid #888; */
+    border: 1px solid #888;
     border-radius: 5px;
 }
 .title-container {
@@ -19,7 +19,7 @@
     flex-direction: row;
     /* border: 1px solid #888; */
     /* border-radius: 5px; */
-    /* z-index: 100; */
+    z-index: 100;
 }
 .title {
     display: block;
