--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,8 @@
   --bg-color9: #55338E;
   --bg-color10: blue;
 
-  --heght-bk: 60px;
-  --width-bk: 90px;
+  --heght-bk: 90px;
+  --width-bk: 120px;
 
   --bg-body: cornflowerblue;
 }
@@ -22,13 +22,14 @@
   font-weight: 400px;
   font-size: 14px;
   font-family: sans-serif, Arial;
-  background: var(--bg-body);
+  /*background: var(--bg-body);*/
 }
 
 .bk-flex-contener {
     display: flex;
     justify-content: center;
     justify-items: center;
+    margin-top: 50px;
     /* border: 1px solid red; */
 }
 .bk-main-contener {
